topic/log/build_2026-03-24_04-19-03/python_topic/stdout_stderr.log
running egg_info
writing ../../build/python_topic/python_topic.egg-info/PKG-INFO
writing dependency_links to ../../build/python_topic/python_topic.egg-info/dependency_links.txt
writing entry points to ../../build/python_topic/python_topic.egg-info/entry_points.txt
writing requirements to ../../build/python_topic/python_topic.egg-info/requires.txt
writing top-level names to ../../build/python_topic/python_topic.egg-info/top_level.txt
reading manifest file '../../build/python_topic/python_topic.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/python_topic/python_topic.egg-info/SOURCES.txt'
running build
running build_py
copying python_topic/pub_node.py -> /home/zqc/ros2_ws/src/portfolio/ROS2/topic/build/python_topic/build/lib/python_topic
running install
running install_lib
copying /home/zqc/ros2_ws/src/portfolio/ROS2/topic/build/python_topic/build/lib/python_topic/pub_node.py -> /home/zqc/ros2_ws/src/portfolio/ROS2/topic/install/python_topic/lib/python3.10/site-packages/python_topic
byte-compiling /home/zqc/ros2_ws/src/portfolio/ROS2/topic/install/python_topic/lib/python3.10/site-packages/python_topic/pub_node.py to pub_node.cpython-310.pyc
running install_data
  File "/home/zqc/ros2_ws/src/portfolio/ROS2/topic/install/python_topic/lib/python3.10/site-packages/python_topic/pub_node.py", line 22
    self.get_logger()info(f'published:{msg}')
                     ^^^^
SyntaxError: invalid syntax

running install_egg_info
removing '/home/zqc/ros2_ws/src/portfolio/ROS2/topic/install/python_topic/lib/python3.10/site-packages/python_topic-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/python_topic/python_topic.egg-info to /home/zqc/ros2_ws/src/portfolio/ROS2/topic/install/python_topic/lib/python3.10/site-packages/python_topic-0.0.0-py3.10.egg-info
running install_scripts
Installing pub_node script to /home/zqc/ros2_ws/src/portfolio/ROS2/topic/install/python_topic/lib/python_topic
writing list of installed files to '/home/zqc/ros2_ws/src/portfolio/ROS2/topic/build/python_topic/install.log'
